--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.example.com"
+baseURL = "http://auror007.github.io"
 title = "Parth's Portfolio"
 theme = "hugo-coder"
 languageCode = "en"
