--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,10 @@ enableEmoji = true
 [markup.highlight]
 style = "github-dark"
 
+
+# [markup.goldmark.renderer]
+# unsafe= true
+
 [params]
 author = "Parth Parmar"
 license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
@@ -150,7 +154,7 @@ url = "https://www.linkedin.com/in/parth-parmar-8aa318108/"
 name = "Resume"
 icon = "fa fa-2x fa-file"
 weight = 4
-url = "https://www.linkedin.com/in/parth-parmar-8aa318108/"
+url = "/resume"
 
 
 [[params.social]]
@@ -182,13 +186,18 @@ weight = 1
 url = "about/"
 
 [[languages.en.menu.main]]
-name = "Blog"
+name = "Resume"
 weight = 2
+url = "resume/"
+
+[[languages.en.menu.main]]
+name = "Blog"
+weight = 3
 url = "posts/"
 
 [[languages.en.menu.main]]
 name = "Projects"
-weight = 3
+weight = 4
 url = "projects/"
 
 [[languages.en.menu.main]]
