--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,8 @@ enableEmoji = true
 style = "github-dark"
 
 
-# [markup.goldmark.renderer]
-# unsafe= true
+[markup.goldmark.renderer]
+unsafe= true
 
 [params]
 author = "Parth Parmar"
@@ -192,7 +192,7 @@ url = "resume/"
 
 [[languages.en.menu.main]]
 name = "Blog"
-weight = 3
+weight = 5
 url = "posts/"
 
 [[languages.en.menu.main]]
@@ -201,8 +201,13 @@ weight = 4
 url = "projects/"
 
 [[languages.en.menu.main]]
+name = "Experience"
+weight = 3
+url = "experience/"
+
+[[languages.en.menu.main]]
 name = "Contact me"
-weight = 5
+weight = 6
 url = "contact/"
 
 # [[languages.pt-br]]
